Updated css for

--- a/qunit.css
+++ b/qunit.css
@@ -20,6 +20,10 @@
 
 /** Resets */
 
+#qunit { position: absolute;
+bottom: 0px;
+z-index: 999999; }
+
 #qunit-tests, #qunit-tests ol, #qunit-header, #qunit-banner, #qunit-userAgent, #qunit-testresult {
 	margin: 0;
 	padding: 0;
